Add lazy image loading and spoiler tags.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 		</div>
 
 		<div id="header-image-section">
-			<img src="https://i.imgur.com/cS9sXGc.png" style="margin: -170px 0 0 0;">
 		</div>
 	</header>
 
 	<section id="description-section">
 		<p>
-			A collection of mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Each map consists of two required objectives (red and green wool), as well as bonus objective (music disc) for those with an inclination for challenge or exploration. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although not intended as the primary play style. 
+			A collection of mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Each map consists of two required objectives (red and green wool), as well as bonus objective (music disc) for those with an inclination for challenge or exploration. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although it not intended as the primary play style. 
+		</p>
+		<p>
+			Additionally, most maps will focus around a particular item, mechanic, or environmental challenge. These are best enjoyed blind, but if you're looking for some specific gameplay, hover over a map's spoiler tag to reveal its twist.
 		</p>
 
 		<p>
@@ -72,6 +74,15 @@
 			<span class="tag-list-description">
 				The most recent version of the map available. v1.0 is the original release version.
 			</span>
+			<br>
+
+			<div class="tag-list">				
+				<span class="tag-list-header">Spoiler Tag:</span>
+				<span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Spoiler!</span> </span>
+			</div>
+			<span class="tag-list-description">
+				Hover over to reveal each map's specific twist (Not recommended)
+			</span>
 		</div>
 	</section>
 
@@ -83,17 +94,19 @@
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
 				<span class="tooltip description-tag version-tag"> 1.13+ </span>
 				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span>
 			</div>
 		</button>
 		<div class="collapsible-content">
-			<img class="content-img" src="https://i.imgur.com/cS9sXGc.png">
+			<img class="content-img" data-src="https://i.imgur.com/cS9sXGc.png">
+			<noscript><img class="content-img" src="https://i.imgur.com/cS9sXGc.png"></noscript>
 			<div class="content-info">
 				<p>
 					Welcome to the treacherous floating ruins of Firestorm Skies! Soar through the air and pick your battles amongst the crumbling spires to locate the wool while dispatching foes with deadly explosive arrows.
 				</p>
 
-				<button class="flat-button button-primary">Download</button>
-				<button class="flat-button button-secondary">Feedback</button>
+				<a href="http://www.mediafire.com/file/rxcruep762843wa/%255B01%255D_Firestorm_Skies_1.13.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
+				<a href="https://www.strawpoll.me/16956476" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
 			</div>
 		</div>
 	</section>
