Standardize tag format, minor description changes.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 	<section id="description-section">
 		<p>
-			A collection of mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Each map consists of two required objectives (red and green wool), as well as bonus objective (music disc) for those with an inclination for challenge or exploration. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although it not intended as the primary play style. 
+			A collection of (mostly) hardcore mode mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Each map consists of two required objectives (red and green wool), as well as a bonus objective (music disc) for those with an inclination for challenge and exploration. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although it not intended as the primary play style. 
 		</p>
 		<p>
-			Additionally, most maps will focus around a particular item, mechanic, or environmental challenge. <!-- These are best enjoyed blind, but if you're looking for some specific gameplay, hover over a map's spoiler tag to reveal its details. -->
+			Additionally, most maps will focus around a particular unique item, mechanic, or environmental challenge. <!-- These are best enjoyed blind, but if you're looking for some specific gameplay, hover over a map's spoiler tag to reveal its details. -->
 		</p>
 
 		<p>
@@ -60,7 +60,7 @@
 
 			<div class="tag-list">				
 				<span class="tag-list-header">MC Version:</span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
 			</div>
 			<span class="tag-list-description">
 				The compatible versions of Minecraft that the map can be played in.
@@ -69,7 +69,7 @@
 
 			<div class="tag-list">				
 				<span class="tag-list-header">Map Version:</span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 			</div>
 			<span class="tag-list-description">
 				The most recent version of the map available. v1.0 is the original release version.
@@ -106,8 +106,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and explosive arrows</span> </span> -->
 			</div>
 		</button>
@@ -133,8 +133,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-easy"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">N/A</span> </span> -->
 			</div>
 		</button>
@@ -160,8 +160,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Depth based gravity traps</span> </span> -->
 			</div>
 		</button>
@@ -187,8 +187,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-easy"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Resurrecting skeletons</span> </span> -->
 			</div>
 		</button>
@@ -214,8 +214,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.12+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Looped non-Euclidean space</span> </span> -->
 			</div>
 		</button>
@@ -225,6 +225,9 @@
 			<div class="content-info">
 				<p>
 					Locked away in a rift between realities, prisoners are driven to madness by the demented design of this inescapable megastructure. Seek your objectives in the face of infinity, lest aimless insanity take you too.
+				</p>
+				<p>
+					<strong>NOTE:</strong> <em> 1.13 seems to run slightly less smoothly on average, so if transitions aren't seamless I've included a version for 1.12 that you can also try. </em>
 				</p>
 
 				<a href="https://www.mediafire.com/file/rmeczkgauz7mpwt/%5B05%5D_The_Escherian_Prison_1.12%2C1.13.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
@@ -241,8 +244,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Creepers and explosives</span> </span> -->
 			</div>
 		</button>
@@ -268,8 +271,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -295,8 +298,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -322,8 +325,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -349,8 +352,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -376,8 +379,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -403,8 +406,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-easy"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -431,8 +434,8 @@
 				<span class="tooltip description-tag star-tag"> <span class="icon-star"></span> </span>
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -458,8 +461,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -485,8 +488,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -512,8 +515,8 @@
 			<div class="item-description">
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
-				<span class="tooltip description-tag version-tag"> 1.13+ </span>
-				<span class="description-tag theme-dark"> v1.0 </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
