Add Discord contact info, fill in README.

--- a/index.html
+++ b/index.html
@@ -534,6 +534,10 @@
 		</div>
 	</section>
 
+	<footer>
+		I can be contacted on the <a href="https://discord.gg/Z2ZbfVQ" target="_blank">CTMC Discord</a> as <em>@Codex#6684</em>
+	</footer>
+
 	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
