Add map changelogs, add bundle button, add LICENSE, compress images.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div id="navbar">
 			<img id="navbar-icon" src="/img/snowflake.png">
 			CTM Advent 2018
+			<span id="navbar-subtitle">By ChimerasOfX</span>
 		</div>
 
 		<div id="header-image-section">
@@ -25,7 +26,7 @@
 
 	<section id="description-section">
 		<p>
-			A collection of (mostly) hardcore mode mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Each map consists of two required objectives (red and green wool), as well as a bonus objective (music disc) for those with an inclination for challenge and exploration. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although it not intended as the primary play style. 
+			A collection of (mostly) hardcore mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Each map consists of two required objectives (red and green wool), as well as a bonus objective (music disc) for those with an inclination for challenge and exploration. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although it not intended as the primary play style. 
 		</p>
 		<p>
 			Additionally, most maps will focus around a particular unique item, mechanic, or environmental challenge. <!-- These are best enjoyed blind, but if you're looking for some specific gameplay, hover over a map's spoiler tag to reveal its details. -->
@@ -60,6 +61,7 @@
 
 			<div class="tag-list">				
 				<span class="tag-list-header">MC Version:</span>
+				<span class="tooltip description-tag mc-version-tag"> 1.12+ </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
 			</div>
 			<span class="tag-list-description">
@@ -69,10 +71,10 @@
 
 			<div class="tag-list">				
 				<span class="tag-list-header">Map Version:</span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span><span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span> </span>
 			</div>
 			<span class="tag-list-description">
-				The most recent version of the map available. v1.0 is the original release version.
+				The most recent version of the map available. Hover to see changelog.
 			</span>
 			<br>
 
@@ -98,6 +100,8 @@
 	<section id="controls-section">
 		<button id="expand-all-button" class="flat-button button-primary">Expand All</button>
 		<button id="collapse-all-button" class="flat-button button-secondary">Collapse All</button>
+		<br>
+		<button style="margin-top: 5px; width: 208px; background-color: #8e61ce" class="flat-button button-primary">Download Bundle (1-16)</button>
 	</section>
 
 	<section id="maps-section">
@@ -107,7 +111,7 @@
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and explosive arrows</span> </span> -->
 			</div>
 		</button>
@@ -121,6 +125,10 @@
 
 				<a href="http://www.mediafire.com/file/rxcruep762843wa/%255B01%255D_Firestorm_Skies_1.13.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
 				<a href="https://www.strawpoll.me/16956476" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
+<!-- 
+				<div class="old-downloads">
+					<a href="a">Download v1.0</a>
+				</div> -->
 			</div>
 		</div>
 
@@ -134,7 +142,7 @@
 				<span class="tooltip description-tag difficulty-tag-easy"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">N/A</span> </span> -->
 			</div>
 		</button>
@@ -161,7 +169,7 @@
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Depth based gravity traps</span> </span> -->
 			</div>
 		</button>
@@ -188,7 +196,7 @@
 				<span class="tooltip description-tag difficulty-tag-easy"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Resurrecting skeletons</span> </span> -->
 			</div>
 		</button>
@@ -215,7 +223,7 @@
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.12+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Looped non-Euclidean space</span> </span> -->
 			</div>
 		</button>
@@ -245,7 +253,7 @@
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Creepers and explosives</span> </span> -->
 			</div>
 		</button>
@@ -272,7 +280,7 @@
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -299,7 +307,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -326,7 +334,7 @@
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -353,7 +361,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -380,7 +388,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -407,7 +415,7 @@
 				<span class="tooltip description-tag difficulty-tag-easy"> <span class="icon-skull"></span> Easy </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -435,7 +443,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -462,7 +470,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -489,7 +497,7 @@
 				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -516,7 +524,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
