Add bundle download link, minor aesthetic changes.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 	<section id="description-section">
 		<p>
-			A collection of (mostly) hardcore mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Each map consists of two required objectives (red and green wool), as well as a bonus objective (music disc) for those with an inclination for challenge and exploration. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although it not intended as the primary play style. 
+			A collection of (mostly) hardcore mini <strong>complete the monument</strong> style maps made for the 2018 winter holiday season. Maps should be comfortably beatable in a single sitting and are also designed with speedrunning in mind, although it not intended as the primary play style. 
 		</p>
 		<p>
-			Additionally, most maps will focus around a particular unique item, mechanic, or environmental challenge. <!-- These are best enjoyed blind, but if you're looking for some specific gameplay, hover over a map's spoiler tag to reveal its details. -->
+			Each map consists of two required objectives (red and green wool), as well as a bonus objective (music disc) for those with an inclination for challenge and exploration. Additionally, most maps will focus around a particular unique item, mechanic, or environmental challenge. <!-- These are best enjoyed blind, but if you're looking for some specific gameplay, hover over a map's spoiler tag to reveal its details. -->
 		</p>
 
 		<p>
@@ -74,7 +74,7 @@
 				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span><span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span> </span>
 			</div>
 			<span class="tag-list-description">
-				The most recent version of the map available. Hover to see changelog.
+				The most recent version of the map available. Hover to see changelogs.
 			</span>
 			<br>
 
@@ -101,7 +101,7 @@
 		<button id="expand-all-button" class="flat-button button-primary">Expand All</button>
 		<button id="collapse-all-button" class="flat-button button-secondary">Collapse All</button>
 		<br>
-		<button style="margin-top: 5px; width: 208px; background-color: #8e61ce" class="flat-button button-primary">Download Bundle (1-16)</button>
+		<a href="https://www.mediafire.com/file/t996r9hqs3b0vh2/%5B1-16%5D_Advent2018.zip/file" target="_blank"><button style="margin-top: 5px; width: 208px; background-color: #8e61ce" class="flat-button button-primary">Download Bundle (1-16)</button></a>
 	</section>
 
 	<section id="maps-section">
